# parliament

./: .gitignore  LICENSE  README.md  STARTUP.md  setup.sh  start-simple.sh  start.sh
backend/: agent_service.py  agent_templates.py  agents.py  debate_constants.py  debate_orchestrator.py  debate_spec.py  env.example  langgraph_debate_orchestrator.py  main.py  models.py  pyproject.toml  run_tests.py  tools.py
backend/defaults/: debate_spec_default.yaml
backend/tests/: README.md  __init__.py  test_budget_guard.py  test_debate_orchestrators.py  test_debate_spec_and_flow.py  test_langgraph_structure.py  test_orchestrator_recursion_limits.py
frontend/: env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentSelector.tsx  Button.tsx  Card.tsx  DebateInput.tsx  DebateMessage.tsx  DebatePage.tsx  DebateStream.tsx  Header.tsx  PanelManager.tsx  TagList.tsx
