[project]
name = "parliament-backend"
version = "0.1.0"
description = "Parliament debate backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "langchain>=0.1.0,<0.2.0",
    "langchain-core>=0.1.0,<0.2.0",
    "langchain-google-vertexai>=0.0.1,<0.1.0",
    "langgraph>=0.0.1,<0.1.0",
    "google-cloud-aiplatform>=1.38.0,<1.39.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."] 

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",  # no-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "COM812",  # missing-trailing-comma
    "S101",  # assert statements (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert statements
    "ANN201",  # missing return type annotations
    "ANN001",  # missing type annotations for function arguments
    "PLR2004",  # magic numbers (common in tests)
    "E501",  # line too long (allow longer lines in tests)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
